RESOLVED FIXED162766
Media controls are displayed in the incorrect state momentarily after switching between tabs playing media
https://bugs.webkit.org/show_bug.cgi?id=162766
Summary Media controls are displayed in the incorrect state momentarily after switchi...
Wenson Hsieh
Reported 2016-09-29 19:03:37 PDT
Media controls are displayed in the incorrect state momentarily after switching between tabs playing media
Attachments
Patch (8.38 KB, patch)
2016-09-29 20:09 PDT, Wenson Hsieh
no flags
Patch (28.02 KB, patch)
2016-10-02 00:05 PDT, Wenson Hsieh
no flags
Set Now Playing visibility after setting up info dictionary. (22.95 KB, patch)
2016-10-03 20:56 PDT, Wenson Hsieh
jer.noble: review+
Patch for landing (22.92 KB, patch)
2016-10-04 08:03 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-09-29 20:09:10 PDT
Wenson Hsieh
Comment 2 2016-09-29 20:10:00 PDT
Wenson Hsieh
Comment 3 2016-10-02 00:05:10 PDT
Wenson Hsieh
Comment 4 2016-10-03 20:56:07 PDT
Created attachment 290561 [details] Set Now Playing visibility after setting up info dictionary.
Jer Noble
Comment 5 2016-10-03 22:17:55 PDT
Comment on attachment 290561 [details] Set Now Playing visibility after setting up info dictionary. View in context: https://bugs.webkit.org/attachment.cgi?id=290561&action=review > Source/WebCore/platform/audio/mac/MediaSessionManagerMac.mm:205 > #endif > + > + if (canLoad_MediaRemote_MRMediaRemoteSetNowPlayingVisibility()) > + MRMediaRemoteSetNowPlayingVisibility(MRMediaRemoteGetLocalOrigin(), MRNowPlayingClientVisibilityAlwaysVisible); I think you need this just on the other side of the #endif. r=me with that fix.
Wenson Hsieh
Comment 6 2016-10-04 07:26:24 PDT
Comment on attachment 290561 [details] Set Now Playing visibility after setting up info dictionary. View in context: https://bugs.webkit.org/attachment.cgi?id=290561&action=review >> Source/WebCore/platform/audio/mac/MediaSessionManagerMac.mm:205 >> + MRMediaRemoteSetNowPlayingVisibility(MRMediaRemoteGetLocalOrigin(), MRNowPlayingClientVisibilityAlwaysVisible); > > I think you need this just on the other side of the #endif. r=me with that fix. Ah, that's right -- fixed. Good catch!
Wenson Hsieh
Comment 7 2016-10-04 08:03:12 PDT
Created attachment 290602 [details] Patch for landing
WebKit Commit Bot
Comment 8 2016-10-04 08:37:58 PDT
Comment on attachment 290602 [details] Patch for landing Clearing flags on attachment: 290602 Committed r206771: <http://trac.webkit.org/changeset/206771>
Note You need to log in before you can comment on or make changes to this bug.